# claude-hook-template

./: .env.sample  CLAUDE.md  README.md  setup.sh
dashboard/: index.html  server.py
examples/hello-world/: README.md  main.py  pyproject.toml
examples/hello-world/hello/: __init__.py  greeter.py
examples/hello-world/tests/: __init__.py  test_greeter.py
